--- a/heating/css/status.css
+++ b/heating/css/status.css
@@ -31,3 +31,9 @@ div.mdl-tabs__tab-bar {
     border-bottom: none !important;
     border-top: none !important;
 }
+
+.tabButton {
+    width: 100%;
+    height: 75px;
+    line-height:1.4;
+}
