[UP] shellyHT added battery levels

--- a/heating/templates/ShellyHT.html
+++ b/heating/templates/ShellyHT.html
@@ -22,6 +22,10 @@
             {{else}}
             {{.Device.Temperature}} °C
             {{end}}
+            {{ if ne .Device.Battery 0.0}}
+                </br>
+                Battery <span id="battery_{{.Device.DomotiqueId}}">{{.Device.Battery}} %</span>
+            {{end}}
         </span>
   </td>
 </tr>
