[UP] Added ShellyI3

--- a/heating/templates/status.html
+++ b/heating/templates/status.html
@@ -53,6 +53,8 @@
         {{template "SHELLY4PM" dict "Device" .Device "Room" .Room}}
         {{ else if eq .Device.DeviceType "SHELLYHT"}}
         {{template "SHELLYHT" dict "Device" .Device "Room" .Room}}
+        {{ else if eq .Device.DeviceType "ShellyI3"}}
+        {{template "ShellyI3" dict "Device" .Device "Room" .Room}}
         {{ end}}
 <tr class="room room{{.Room}}">
     <td colspan="5" style="height: 10px"></td>
