[UP][Radiators] Changed from temp management to % open management

--- a/heating/templates/Radiator.html
+++ b/heating/templates/Radiator.html
@@ -8,7 +8,7 @@
         </button>
     </td>
     <td style="text-align: center">
-        Target <span id="temperatureTarget_{{.Device.DomotiqueId}}" style="font-size: large">{{.Device.TemperatureTarget}} °C</span><br>
+<!--        Target <span id="temperatureTarget_{{.Device.DomotiqueId}}" style="font-size: large">{{.Device.TemperatureTarget}} °C</span><br>-->
         Open <span id="position_{{.Device.DomotiqueId}}" style="font-size: initial">{{.Device.CurrentPos}} %</span>
     </td>
     <td width="100px" >
